refactor(artigos): adicionar novos campos e melhorar a tabela
Adiciona os campos "Publicado a partir de" e "Publicado até" ao arquivo
de tradução pt_BR.json. Melhora o formulário de artigos com a
atualização do slug ao alterar o título e adiciona sugestões de tags
dinâmicas. A tabela de artigos agora inclui filtros para os novos campos
de data e melhorias na ordenação.

--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -9,6 +9,8 @@
     "Images": "Imagens",
     "Star": "Destaque",
     "Published at": "Data de publicação",
+    "Published from": "Publicado a partir de",
+    "Published until": "Publicado até",
     "Author": "Autor",
     "Tags": "Marcadores"
 }
